# Reconstruction

./: .gitignore  README.md  multi-paganin.ipynb  multi_paganin_test.ipynb  paganin.ipynb  pyproject.toml  reconstruction.ipynb  requirements.txt  section1.py  test.ipynb  test_reco.ipynb
launchers/: maj.bat  napari_launcher.bat
src/reco_plugin/: __init__.py  _link.py  _link_mp.py  _reader.py  _widget.py  _writer.py  constants.py  napari.yaml  ui_mp_sections.py  ui_sections.py
src/reco_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reco_plugin/processing/: angles.py  cor.py  phase.py  process.py  reconstruction.py  sinogram.py
src/reco_plugin/utils/: experiment.py  layer_utils.py  link_utils.py  qt_helpers.py
src/reco_plugin/widgets/: _processing.py  _section.py  _utils.py
